argocd/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.zion.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-svc
                port:
                  name: http
